# SmartAccess

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflow/: app.yml
.github/workflows/: app.yml
certs/: certificate.pem  certificate_test.pem  key.pem  key_test.pem
espq/: __init__.py  main.py
static/: index.html  styles.css
tests/: test_main.py
